--- a/web/index.html
+++ b/web/index.html
@@ -2,13 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=resume"/>
     <link rel="stylesheet" href="css/style.css">
     <title>Практика Java. Разработка Web приложения.</title>
 </head>
 <body>
-<header>Header</header>
-<h2>Приложение вебинара <a href="http://javawebinar.ru/basejava/" target="_blank">Практика Java. Разработка Web
-    приложения."</a></h2>
-<footer>Footer</footer>
+<p><a href="resume">Resume list</a> </p>
 </body>
 </html>
